--- a/floral.html
+++ b/floral.html
@@ -177,7 +177,8 @@
 
     <main class="container">
         <section id="accueil">
-            <h1><br>Bienvenue chez Fleurs de Rêve</h1>
+            <p><br><br></p>
+            <h1>Bienvenue chez Fleurs de Rêve</h1>
             <p>Découvrez nos magnifiques bouquets et compositions florales pour toutes les occasions.</p>
         </section>
 
