--- a/floral.html
+++ b/floral.html
@@ -3,251 +3,322 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fleurs de Rêve - Boutique en ligne</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <title>Ma Boutique en Ligne</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
-        :root {
-            --primary-color: #ff69b4;
-            --secondary-color: #4caf50;
-            --text-color: #333;
-            --bg-color: #f9f9f9;
-            --card-bg: #ffffff;
-        }
-
         * {
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
             line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--bg-color);
         }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
         header {
-            background-color: var(--primary-color);
-            color: #fff;
-            padding: 20px 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            text-align: center;
         }
-
-        nav ul {
+        nav {
+            background-color: #f2f2f2;
+            padding: 0.5rem;
             display: flex;
             justify-content: center;
-            list-style-type: none;
+            flex-wrap: wrap;
         }
-
-        nav ul li {
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: #fff;
+        nav a {
+            color: #333;
             text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            color: var(--secondary-color);
-        }
-
-        main {
-            margin-top: 80px;
-            padding: 40px 0;
-        }
-
-        h1, h2 {
-            color: var(--primary-color);
-            margin-bottom: 20px;
-        }
-
-        .products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-        }
-
-        .product {
-            background-color: var(--card-bg);
-            border-radius: 5px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .product:hover {
-            transform: translateY(-5px);
-        }
-
-        .product img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .product-info {
-            padding: 20px;
-        }
-
-        .product h3 {
-            margin-bottom: 10px;
-        }
-
-        .price {
-            font-weight: bold;
-            color: var(--secondary-color);
-            margin-bottom: 10px;
-        }
-
-        .add-to-cart {
-            display: inline-block;
-            background-color: var(--secondary-color);
-            color: #fff;
-            padding: 8px 15px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
+            padding: 0.5rem 1rem;
+            margin: 0.25rem;
+            border-radius: 4px;
+            background-color: #ddd;
             transition: background-color 0.3s ease;
         }
-
-        .add-to-cart:hover {
+        nav a:hover {
+            background-color: #bbb;
+        }
+        main {
+            padding: 1rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .product {
+            border: 1px solid #ddd;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            border-radius: 4px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .product:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+        #cart-icon {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            background-color: #4CAF50;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 1000;
+        }
+        #cart {
+            position: fixed;
+            top: 0;
+            right: -300px;
+            width: 300px;
+            height: 100vh;
+            background-color: white;
+            border-left: 1px solid #ddd;
+            padding: 1rem;
+            overflow-y: auto;
+            transition: right 0.3s ease;
+            z-index: 999;
+        }
+        #cart.open {
+            right: 0;
+        }
+        #search-bar {
+            margin: 1rem 0;
+            display: flex;
+            gap: 0.5rem;
+        }
+        #search-bar input {
+            flex-grow: 1;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        #categories {
+            margin-bottom: 1rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+        }
+        #order-form {
+            margin-top: 2rem;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        button:hover {
             background-color: #45a049;
         }
-
-        footer {
-            background-color: var(--primary-color);
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
+        #product-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 1rem;
         }
-
-        .social-links {
-            margin-top: 20px;
+        #user-info {
+            position: fixed;
+            top: 1rem;
+            right: 4rem;
+            background-color: #4CAF50;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            cursor: pointer;
+            z-index: 1000;
         }
-
-        .social-links a {
-            color: #fff;
-            font-size: 1.5em;
-            margin: 0 10px;
-            transition: color 0.3s ease;
+        #login-buttons {
+            display: flex;
+            justify-content: center;
+            margin-top: 1rem;
         }
-
-        .social-links a:hover {
-            color: var(--secondary-color);
+        #login-buttons button {
+            margin: 0 0.5rem;
         }
-
-        @media (max-width: 768px) {
-            nav ul {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            nav ul li {
-                margin: 10px 0;
-            }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
     </style>
 </head>
 <body>
     <header>
-        <nav class="container">
-            <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#boutique">Boutique</a></li>
-                <li><a href="#a-propos">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#panier"><i class="fas fa-shopping-cart"></i> Panier</a></li>
-            </ul>
-        </nav>
+        <h1>Ma Boutique en Ligne</h1>
     </header>
-
-    <main class="container">
-        <section id="accueil">
-            <p><br><br><br></p>
-            <h1>Bienvenue chez Fleurs de Rêve</h1>
-            <p>Découvrez nos magnifiques bouquets et compositions florales pour toutes les occasions.</p>
-        </section>
-
-        <section id="boutique">
-            <h2>Nos Produits</h2>
-            <div class="products">
-                <div class="product">
-                    <img src="/api/placeholder/300/200" alt="Bouquet de roses">
-                    <div class="product-info">
-                        <h3>Bouquet de roses</h3>
-                        <p class="price">39,99 €</p>
-                        <a href="#" class="add-to-cart">Ajouter au panier</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="/api/placeholder/300/200" alt="Composition printanière">
-                    <div class="product-info">
-                        <h3>Composition printanière</h3>
-                        <p class="price">49,99 €</p>
-                        <a href="#" class="add-to-cart">Ajouter au panier</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="/api/placeholder/300/200" alt="Orchidée en pot">
-                    <div class="product-info">
-                        <h3>Orchidée en pot</h3>
-                        <p class="price">34,99 €</p>
-                        <a href="#" class="add-to-cart">Ajouter au panier</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="/api/placeholder/300/200" alt="Bouquet champêtre">
-                    <div class="product-info">
-                        <h3>Bouquet champêtre</h3>
-                        <p class="price">29,99 €</p>
-                        <a href="#" class="add-to-cart">Ajouter au panier</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <nav>
+        <a href="#home">Accueil</a>
+        <a href="#products">Produits</a>
+        <a href="#order">Commander</a>
+    </nav>
+    
+    <main id="content">
+        <!-- Le contenu changera en fonction de la page -->
     </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Fleurs de Rêve. Tous droits réservés.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-pinterest"></i></a>
-            </div>
-        </div>
-    </footer>
+    <div id="cart-icon" onclick="toggleCart()">🛒</div>
+    <div id="cart">
+        <h2>Panier</h2>
+        <ul id="cart-items"></ul>
+        <p>Total: <span id="cart-total">0</span>€</p>
+        <button onclick="generatePDF()">Télécharger le récapitulatif PDF</button>
+    </div>
 
     <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
+        // Contenu de la page d'accueil
+        const homePage = `
+            <h2>Bienvenue dans notre boutique</h2>
+            <p>Découvrez nos produits exceptionnels !</p>
+            <div id="login-buttons">
+                <button onclick="netlifyIdentity.open('login')">Se connecter</button>
+                <button onclick="netlifyIdentity.open('signup')">S'inscrire</button>
+            </div>
+        `;
 
-        document.querySelectorAll('.add-to-cart').forEach(button => {
-            button.addEventListener('click', function(e) {
-                e.preventDefault();
-                alert('Produit ajouté au panier !');
+        // Contenu de la page des produits
+        const productsPage = `
+            <h2>Nos Produits</h2>
+            <div id="search-bar">
+                <input type="text" id="search-input" placeholder="Rechercher un produit">
+                <button onclick="searchProducts()">Rechercher</button>
+            </div>
+            <div id="categories">
+                <button onclick="filterProducts('all')">Tous</button>
+                <button onclick="filterProducts('à-planter')">à planter</button>
+                <button onclick="filterProducts('bouquet')">Bouquets</button>
+            </div>
+            <div id="product-list"></div>
+        `;
+
+        // Contenu de la page de commande
+        const orderPage = `
+            <h2>Passer une commande</h2>
+            <form id="order-form">
+                <label for="name">Nom :</label>
+                <input type="text" id="name" required><br><br>
+                <label for="email">Email :</label>
+                <input type="email" id="email" required><br><br>
+                <label for="address">Adresse :</label>
+                <textarea id="address" required></textarea><br><br>
+                <button type="submit">Commander</button>
+            </form>
+        `;
+
+        // Liste des produits
+        const products = [
+            { id: 1, name: "Rose", price: 300, category: "bouquet" },
+            { id: 2, name: "Tulippe", price: 800, category: "bouquet" },
+            { id: 3, name: "Hortansia", price: 20, category: "à-planter" },
+            { id: 4, name: "juliete", price: 50, category: "à-planter" },
+        ];
+
+        // Fonction pour afficher les produits
+        function displayProducts(productsToShow = products) {
+            const productList = document.getElementById('product-list');
+            productList.innerHTML = '';
+            productsToShow.forEach(product => {
+                const productDiv = document.createElement('div');
+                productDiv.className = 'product fade-in';
+                productDiv.innerHTML = `
+                    <h3>${product.name}</h3>
+                    <p>Prix : ${product.price}€</p>
+                    <p>Catégorie : ${product.category}</p>
+                    <button onclick="addToCart(${product.id}, '${product.name}', ${product.price})">Ajouter au panier</button>
+                `;
+                productList.appendChild(productDiv);
             });
-        });
+        }
+
+        // Fonction pour changer le contenu de la page
+        function navigate(page) {
+            const content = document.getElementById('content');
+            content.style.opacity = '0';
+            setTimeout(() => {
+                switch(page) {
+                    case 'home':
+                        content.innerHTML = homePage;
+                        break;
+                    case 'products':
+                        content.innerHTML = productsPage;
+                        displayProducts();
+                        break;
+                    case 'order':
+                        content.innerHTML = orderPage;
+                        break;
+                }
+                content.style.opacity = '1';
+            }, 300);
+        }
+
+        // Fonction pour gérer le panier
+        let cart = [];
+        function addToCart(id, name, price) {
+            cart.push({ id, name, price });
+            updateCart();
+        }
+
+        function updateCart() {
+            const cartItems = document.getElementById('cart-items');
+            const cartTotal = document.getElementById('cart-total');
+            cartItems.innerHTML = '';
+            let total = 0;
+            cart.forEach(item => {
+                const listItem = document.createElement('li');
+                listItem.innerText = `${item.name} - ${item.price}€`;
+                cartItems.appendChild(listItem);
+                total += item.price;
+            });
+            cartTotal.innerText = total;
+        }
+
+        // Fonction pour générer un PDF
+        function generatePDF() {
+            const doc = new jspdf.jsPDF();
+            doc.text("Récapitulatif de votre commande", 10, 10);
+            cart.forEach((item, index) => {
+                doc.text(`${index + 1}. ${item.name} - ${item.price}€`, 10, 20 + (index * 10));
+            });
+            doc.save("commande.pdf");
+        }
+
+        // Fonction pour rechercher des produits
+        function searchProducts() {
+            const searchInput = document.getElementById('search-input').value.toLowerCase();
+            const filteredProducts = products.filter(product => product.name.toLowerCase().includes(searchInput));
+            displayProducts(filteredProducts);
+        }
+
+        // Fonction pour filtrer par catégorie
+        function filterProducts(category) {
+            if (category === 'all') {
+                displayProducts(products);
+            } else {
+                const filteredProducts = products.filter(product => product.category === category);
+                displayProducts(filteredProducts);
+            }
+        }
+
+        // Fonction pour afficher/masquer le panier
+        function toggleCart() {
+            const cartElement = document.getElementById('cart');
+            if (cartElement.classList.contains('open')) {
+                cartElement.classList.remove('open');
+            } else {
+                cartElement.classList.add('open');
+            }
+        }
+        // Initialisation
+        navigate('home');
     </script>
 </body>
 </html>
