--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.20/jspdf.plugin.autotable.min.js"></script>
     <style>
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideInFromLeft {
+            from { transform: translateX(-100%); }
+            to { transform: translateX(0); }
+        }
+        @keyframes slideInFromRight {
+            from { transform: translateX(100%); }
+            to { transform: translateX(0); }
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-30px); }
+            60% { transform: translateY(-15px); }
+        }
+        @keyframes rotate {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
         * {
             box-sizing: border-box;
             transition: all 0.3s ease;
+        }
+        html {
+            scroll-behavior: smooth;
         }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -24,6 +48,10 @@
             color: #e0e0e0;
             padding: 1rem;
             text-align: center;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+            animation: slideInFromTop 0.5s ease-out;
         }
         nav {
             background-color: #333;
@@ -31,6 +59,10 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
+            position: fixed;
+            width: 100%;
+            top: 60px;
+            z-index: 999;
         }
         nav a {
             color: #e0e0e0;
@@ -39,15 +71,25 @@
             margin: 0.25rem;
             border-radius: 4px;
             background-color: #222;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         nav a:hover {
             background-color: #444;
+            transform: scale(1.1);
         }
         main {
             padding: 1rem;
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 120px auto 0;
+        }
+        section {
+            margin-bottom: 4rem;
+            padding: 2rem;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            opacity: 0;
+            animation: fadeIn 1s forwards;
         }
         .product {
             border: 1px solid #444;
@@ -58,9 +100,10 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             background-color: #fff;
             color: #333;
+            animation: slideInFromLeft 0.5s ease-out;
         }
         .product:hover {
-            transform: translateY(-5px);
+            transform: translateY(-5px) scale(1.03);
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
         #cart-icon {
@@ -73,6 +116,7 @@
             border-radius: 50%;
             cursor: pointer;
             z-index: 1000;
+            animation: bounce 2s infinite;
         }
         #cart {
             position: fixed;
@@ -90,6 +134,7 @@
         }
         #cart.open {
             right: 0;
+            animation: slideInFromRight 0.5s ease-out;
         }
         #search-bar {
             margin: 1rem 0;
@@ -103,6 +148,10 @@
             border-radius: 4px;
             background-color: #fff;
             color: #333;
+            transition: box-shadow 0.3s ease;
+        }
+        #search-bar input:focus {
+            box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
         }
         #categories {
             margin-bottom: 1rem;
@@ -129,34 +178,20 @@
         }
         button:hover {
             background-color: #357abd;
+            transform: scale(1.05);
         }
         #product-list {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 1rem;
         }
-        #user-info {
-            position: fixed;
-            top: 1rem;
-            right: 4rem;
-            background-color: #4a90e2;
-            color: #fff;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            cursor: pointer;
-            z-index: 1000;
-        }
-        #login-buttons {
-            display: flex;
-            justify-content: center;
-            margin-top: 1rem;
-        }
-        #login-buttons button {
-            margin: 0 0.5rem;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        .placeholder-image {
+            width: 100%;
+            max-width: 800px;
+            height: auto;
+            margin: 1rem auto;
+            display: block;
+            animation: rotate 20s linear infinite;
         }
     </style>
 </head>
@@ -165,32 +200,20 @@
         <h1>Serebula - Tapis de souris gaming</h1>
     </header>
     <nav>
-        <a href="#home" onclick="navigate('home')">Accueil</a>
-        <a href="#products" onclick="navigate('products')">Produits</a>
-        <a href="#order" onclick="navigate('order')">Commander</a>
+        <a href="#home">Accueil</a>
+        <a href="#products">Produits</a>
+        <a href="#order">Commander</a>
     </nav>
     
-    <main id="content">
-        <!-- Le contenu changera en fonction de la page -->
-    </main>
-    <div id="cart-icon" onclick="toggleCart()">🛒</div>
-    <div id="cart">
-        <h2>Panier</h2>
-        <ul id="cart-items"></ul>
-        <p>Total: <span id="cart-total">0</span>€</p>
-        <button onclick="generatePDF()">Télécharger le récapitulatif PDF</button>
-    </div>
-
-    <script>
-        // Contenu de la page d'accueil
-        const homePage = `
+    <main>
+        <section id="home">
             <h2>Bienvenue chez Serebula</h2>
             <p>Découvrez nos tapis de souris grand format pour une expérience de jeu optimale !</p>
-        `;
+        </section>
 
-        // Contenu de la page des produits
-        const productsPage = `
+        <section id="products">
             <h2>Nos Tapis de Souris Gaming</h2>
+            <img src="/api/placeholder/800/400" alt="Tapis de souris gaming" class="placeholder-image">
             <div id="search-bar">
                 <input type="text" id="search-input" placeholder="Rechercher un produit">
                 <button onclick="searchProducts()">Rechercher</button>
@@ -202,10 +225,9 @@
                 <button onclick="filterProducts('4XL')">4XL</button>
             </div>
             <div id="product-list"></div>
-        `;
+        </section>
 
-        // Contenu de la page de commande
-        const orderPage = `
+        <section id="order">
             <h2>Passer une commande</h2>
             <form id="order-form" onsubmit="submitOrder(event)">
                 <label for="name">Nom :</label>
@@ -216,8 +238,18 @@
                 <textarea id="address" required></textarea><br><br>
                 <button type="submit">Commander</button>
             </form>
-        `;
+        </section>
+    </main>
 
+    <div id="cart-icon" onclick="toggleCart()">🛒</div>
+    <div id="cart">
+        <h2>Panier</h2>
+        <ul id="cart-items"></ul>
+        <p>Total: <span id="cart-total">0</span>€</p>
+        <button onclick="generatePDF()">Télécharger le récapitulatif PDF</button>
+    </div>
+
+    <script>
         // Liste des produits
         const products = [
             { id: 1, name: "Tapis Serebula Pro XXL", price: 29.99, category: "XXL", description: "900x400mm, surface lisse" },
@@ -232,7 +264,7 @@
             productList.innerHTML = '';
             productsToShow.forEach(product => {
                 const productDiv = document.createElement('div');
-                productDiv.className = 'product fade-in';
+                productDiv.className = 'product';
                 productDiv.innerHTML = `
                     <h3>${product.name}</h3>
                     <p>${product.description}</p>
@@ -242,27 +274,6 @@
                 `;
                 productList.appendChild(productDiv);
             });
-        }
-
-        // Fonction pour changer le contenu de la page
-        function navigate(page) {
-            const content = document.getElementById('content');
-            content.style.opacity = '0';
-            setTimeout(() => {
-                switch(page) {
-                    case 'home':
-                        content.innerHTML = homePage;
-                        break;
-                    case 'products':
-                        content.innerHTML = productsPage;
-                        displayProducts();
-                        break;
-                    case 'order':
-                        content.innerHTML = orderPage;
-                        break;
-                }
-                content.style.opacity = '1';
-            }, 300);
         }
 
         // Fonction pour gérer le panier
@@ -355,7 +366,7 @@
         }
 
         // Initialisation
-        navigate('home');
+        displayProducts();
     </script>
 </body>
 </html>
