--- a/index.html
+++ b/index.html
@@ -7,7 +7,192 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.20/jspdf.plugin.autotable.min.js"></script>
     <style>
-        /* Styles inchangés ... */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideInFromLeft {
+            from { transform: translateX(-100%); }
+            to { transform: translateX(0); }
+        }
+        @keyframes slideInFromRight {
+            from { transform: translateX(100%); }
+            to { transform: translateX(0); }
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-30px); }
+            60% { transform: translateY(-15px); }
+        }
+        @keyframes rotate {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+        * {
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
+        html {
+            scroll-behavior: smooth;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        header {
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+            padding: 1rem;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+            animation: slideInFromTop 0.5s ease-out;
+        }
+        nav {
+            background-color: #333;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            position: fixed;
+            width: 100%;
+            top: 60px;
+            z-index: 999;
+        }
+        nav a {
+            color: #e0e0e0;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            margin: 0.25rem;
+            border-radius: 4px;
+            background-color: #222;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        nav a:hover {
+            background-color: #444;
+            transform: scale(1.1);
+        }
+        main {
+            padding: 1rem;
+            max-width: 1200px;
+            margin: 120px auto 0;
+        }
+        section {
+            margin-bottom: 4rem;
+            padding: 2rem;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            opacity: 0;
+            animation: fadeIn 1s forwards;
+        }
+        .product {
+            border: 1px solid #444;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            border-radius: 4px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background-color: #fff;
+            color: #333;
+            animation: slideInFromLeft 0.5s ease-out;
+        }
+        .product:hover {
+            transform: translateY(-5px) scale(1.03);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+        #cart-icon {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            background-color: #4a90e2;
+            color: #fff;
+            padding: 0.5rem 1rem;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 1000;
+            animation: bounce 2s infinite;
+        }
+        #cart {
+            position: fixed;
+            top: 0;
+            right: -300px;
+            width: 300px;
+            height: 100vh;
+            background-color: #fff;
+            border-left: 1px solid #444;
+            padding: 1rem;
+            overflow-y: auto;
+            transition: right 0.3s ease;
+            z-index: 999;
+            color: #333;
+        }
+        #cart.open {
+            right: 0;
+            animation: slideInFromRight 0.5s ease-out;
+        }
+        #search-bar {
+            margin: 1rem 0;
+            display: flex;
+            gap: 0.5rem;
+        }
+        #search-bar input {
+            flex-grow: 1;
+            padding: 0.5rem;
+            border: 1px solid #444;
+            border-radius: 4px;
+            background-color: #fff;
+            color: #333;
+            transition: box-shadow 0.3s ease;
+        }
+        #search-bar input:focus {
+            box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
+        }
+        #categories {
+            margin-bottom: 1rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+        }
+        #order-form {
+            margin-top: 2rem;
+        }
+        button {
+            background-color: #4a90e2;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        button:hover {
+            background-color: #357abd;
+            transform: scale(1.05);
+        }
+        #product-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 1rem;
+        }
+        .placeholder-image {
+            width: 100%;
+            max-width: 800px;
+            height: auto;
+            margin: 1rem auto;
+            display: block;
+            animation: rotate 20s linear infinite;
+        }
     </style>
 </head>
 <body>
